fix spacing issues on form, add fade in title on new event, all events

--- a/app/assets/stylesheets/proposals.scss
+++ b/app/assets/stylesheets/proposals.scss
@@ -20,7 +20,6 @@ body {
 
 #proposal_holder {
 	min-height: 100vh;
-	// background-image: image-url('BLUR-1.jpg');
 	padding-bottom: 5vh;
 }
 
@@ -222,7 +221,7 @@ body {
 	font-size: 4em;
 	height: 15vh;
 	text-align: center;
-	background-color: #141414;
+	background-color: #24242	4;
 	margin-top: 0;
 	margin-left: 0;
 	margin-right: 0;
@@ -317,7 +316,6 @@ body {
 
 #timeslot_form {
 	border-radius: 10px;
-	margin-bottom: 15vh;
 	margin-top: 3vh;
 	margin-left: auto;
 	margin-right: auto;
@@ -585,4 +583,52 @@ body {
 .diamond-pic {
 	width: 2em;
 	height: 2em;
+}
+
+// Text Fade //
+
+.ease-fast {
+	-webkit-animation: fadein 2s;
+	-moz-animation: fadein 2s;
+	-ms-animation: fadein 2s;
+	-o-animation: fadein 2s;
+	animation: fadein 2s;
+}
+
+.ease-slow {
+	-webkit-animation: fadein 4s;
+	-moz-animation: fadein 4s;
+	-ms-animation: fadein 4s;
+	-o-animation: fadein 4s;
+	animation: fadein 4s;
+
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
